# rec_menu

./: README.md  demo.py  main.py  pyproject.toml
src/rec_menu/: __init__.py  cli.py  menu_data.py  models.py  recommender.py
